# MIP_lab

./: .gitignore  README.md  goodBadClassificationsNoCanny.mat  lastSession.mat  loadDataset.m  matlabData.mat  trainset.rar
MAT files/: classifier.mat  classifier2.mat  goodBadClassificationsWithCanny.mat  loadDataset.m  pointsOfInterest.mat  pointsOfInterestFull.mat
classification/: classifyAllJoints.m  classifyJoint.m  classifySegmentation.m  classifyTry1.m  classifyTry2.m  createTrainSet.m  createTrainset.m  debug.m  getBorderRoughness.m  getImageFromPoint.m  getImagesFromBorderSeg.m  getOuterBorder.m  getRoughness.m  imageScroller.fig  imageScroller.m  manualSegmentationClassification.m  myBagOfFeaturesExtractor.m  myLBP.m  processScore.m  runPointSelection.m  saveFileForCNN.m  saveFileForCNN.m~  segmentRelevantBorder.m  segmentRelevantBorders.m  svmSeg.m  svmSegNew.m  testClassification.m  testSegmentBorders.m  transformToBinaryFile.m  useBOF.m
classification/oldStuff/: HOG.m  borderToGraph.m  classifyLBP.m  classifyTry1.m  classifyTry2.m  createTrainset_old.m
datasets/: image classifier dataset.rar
docs/: sacrum_for_Eliel.xlsx  sij_segmentation.ppt
segmentation/: extendSacrumIlium.m  getBones.m  getBoundary.m  getHips.m  getImagePatches.m  loadSegmentations.m  minCutHips.m  minCutScript.m  scoreSegmentation.m  segmentRelevantBorder.m  segmentRelevantBorders.m  segmentSij.m  test.m
utils/Bk_matlab/: bk_matlab.cpp
utils/graphCut/: CMakeLists.txt  graph_cut.cxx
utils/graphCut/maxflow/: Makefile  graph.h  graph.txx  maxflow.txx  test.cpp
(+39 files in other folders)
